--- a/TapasTop/app/src/main/res/values/colors.xml
+++ b/TapasTop/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    <color name="cyan_700">#00b8d4</color>
+    <color name="blue_700">#2962ff</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
