--- a/TapasTop/app/src/main/res/layout/login_tab_fragment.xml
+++ b/TapasTop/app/src/main/res/layout/login_tab_fragment.xml
@@ -4,35 +4,51 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
+        style="?attr/textInputOutlinedStyle"
         android:id="@+id/login_username"
+        app:boxCornerRadiusTopStart="20dp"
+        app:boxCornerRadiusTopEnd="20dp"
+        app:boxCornerRadiusBottomEnd="20dp"
+        app:boxCornerRadiusBottomStart="20dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         app:layout_constraintWidth_percent=".8"
         app:layout_constraintVertical_bias=".3"
         app:layout_constraintHorizontal_bias=".5"
-        android:hint="@string/username_hint"
-        android:paddingLeft="20dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:drawableStart="@drawable/ic_username"
-        android:drawableTint="@color/teal_700"
-        android:drawablePadding="20dp"
-        android:background="@drawable/edit_text_bg"/>
+        app:startIconDrawable="@drawable/ic_username"
+        app:startIconTint="@color/teal_700"
+        app:hintTextColor="@color/black"
+        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
+        app:boxStrokeColor="@color/teal_700"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/login_username_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/username_hint" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        style="?attr/textInputOutlinedStyle"
+        android:id="@+id/login_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/password_hint"
-        android:paddingLeft="20dp"
+        app:boxCornerRadiusTopStart="20dp"
+        app:boxCornerRadiusTopEnd="20dp"
+        app:boxCornerRadiusBottomEnd="20dp"
+        app:boxCornerRadiusBottomStart="20dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:layout_marginTop="20dp"
-        app:boxBackgroundColor="@color/teal_700"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,19 +57,21 @@
         app:layout_constraintVertical_bias="0"
         app:layout_constraintHorizontal_bias=".5"
         app:startIconDrawable="@drawable/ic_password_lock"
+        app:startIconTint="@color/teal_700"
         app:endIconMode="password_toggle"
-        >
-
+        app:endIconTint="@color/teal_700"
+        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
+        app:hintTextColor="@color/black"
+        app:boxStrokeColor="@color/teal_700">
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/login_password"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:background="@drawable/edit_text_bg"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
-    
+
     <Button
         android:id="@+id/btn_login"
         android:layout_width="0dp"
@@ -70,7 +88,7 @@
         android:textColor="@color/white"
         app:backgroundTint="@null"
         android:background="@drawable/button_bg"
-        android:stateListAnimator="@null" />
+        android:stateListAnimator="@null"/>
     <TextView
         android:id="@+id/forgot_password"
         android:layout_width="wrap_content"
@@ -80,7 +98,7 @@
         app:layout_constraintHorizontal_bias="1"
         android:layout_marginTop="5dp"
         android:layout_marginRight="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_login"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="@id/login_password"
         app:layout_constraintTop_toBottomOf="@id/login_password"
