--- a/TapasTop/app/src/main/res/values/styles.xml
+++ b/TapasTop/app/src/main/res/values/styles.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Widget.App.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="startIconTint">@color/teal_700</item>
-        <item name="endIconTint">@color/teal_700</item>
+    <style name="OutlinedRoundedBox" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="shapeAppearanceOverlay">@style/shapeAppearanceOverlay.TapasTop.TextInputLayout.Rounded</item>
+        <item name="boxCornerRadiusTopStart">20dp</item>
+        <item name="boxCornerRadiusTopEnd">20dp</item>
+        <item name="boxCornerRadiusBottomStart">20dp</item>
+        <item name="boxCornerRadiusBottomEnd">20dp</item>
+        <item name="hintTextColor">?attr/colorSecondaryVariant</item>
+        <item name="boxStrokeColor">?attr/colorSecondaryVariant</item>
+        <item name="hintTextAppearance">@style/TextAppearance.AppCompat.Small</item>
+    </style>
+    <style name="shapeAppearanceOverlay.TapasTop.TextInputLayout.Rounded" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">8dp</item>
     </style>
 </resources>
