--- a/TapasTop/app/src/main/res/layout/fragment_login_tab.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_login_tab.xml
@@ -12,20 +12,20 @@
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         app:layout_constraintWidth_percent=".8"
-        app:layout_constraintVertical_bias=".3"
+        app:layout_constraintVertical_bias="0.2"
         app:layout_constraintHorizontal_bias=".5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:startIconDrawable="@drawable/ic_username"
-        app:startIconTint="?attr/colorSecondaryVariant">
+        app:startIconDrawable="@drawable/ic_username">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/login_username_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/username_hint" />
+            android:hint="@string/username_hint"/>
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -45,35 +45,14 @@
         app:layout_constraintVertical_bias="0"
         app:layout_constraintHorizontal_bias=".5"
         app:startIconDrawable="@drawable/ic_password_lock"
-        app:startIconTint="?attr/colorSecondaryVariant"
-        app:endIconMode="password_toggle"
-        app:endIconTint="?attr/colorSecondaryVariant">
+        app:endIconMode="password_toggle">
         <com.google.android.material.textfield.TextInputEditText
-
+            android:id="@+id/login_password_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             />
     </com.google.android.material.textfield.TextInputLayout>
-
-
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintWidth_percent=".8"
-        app:layout_constraintVertical_bias=".7"
-        android:text="@string/login_title"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/login_password"
-        android:textColor="@color/white"
-        app:backgroundTint="@null"
-        android:background="@drawable/button_bg"
-        android:stateListAnimator="@null"/>
     <TextView
         android:id="@+id/forgot_password"
         android:layout_width="wrap_content"
@@ -88,4 +67,18 @@
         app:layout_constraintEnd_toEndOf="@id/login_password"
         app:layout_constraintTop_toBottomOf="@id/login_password"
         />
+    <Button
+        style="@style/RoundedButton"
+        android:id="@+id/btn_login"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintWidth_percent=".8"
+        app:layout_constraintVertical_bias=".4"
+        android:text="@string/login_title"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/login_password"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
