--- a/TapasTop/app/src/main/res/values/styles.xml
+++ b/TapasTop/app/src/main/res/values/styles.xml
@@ -9,9 +9,19 @@
         <item name="hintTextColor">?attr/colorSecondaryVariant</item>
         <item name="boxStrokeColor">?attr/colorSecondaryVariant</item>
         <item name="hintTextAppearance">@style/TextAppearance.AppCompat.Small</item>
+        <item name="startIconTint">?attr/colorSecondaryVariant</item>
+        <item name="endIconTint">?attr/colorSecondaryVariant</item>
     </style>
     <style name="shapeAppearanceOverlay.TapasTop.TextInputLayout.Rounded" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">8dp</item>
+    </style>
+
+    <style name="RoundedButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="backgroundTint">?attr/colorSecondaryVariant</item>
+        <item name="android:background">@drawable/button_bg</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 </resources>
