--- a/TapasTop/app/src/main/res/navigation/nav_graph.xml
+++ b/TapasTop/app/src/main/res/navigation/nav_graph.xml
@@ -10,7 +10,8 @@
         android:label="InitialFragment" >
         <action
             android:id="@+id/action_initialFragment_to_mainMenuFragment"
-            app:destination="@id/mainMenuFragment" />
+            app:destination="@id/mainMenuFragment"
+            app:enterAnim="@anim/enter_anim" />
     </fragment>
     <fragment
         android:id="@+id/mainMenuFragment"
