--- a/TapasTop/app/src/main/res/values/colors.xml
+++ b/TapasTop/app/src/main/res/values/colors.xml
@@ -7,7 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="cyan_700">#00b8d4</color>
     <color name="blue_700">#2962ff</color>
+    <color name="blue_400">#42a5f5</color>
+    <color name="indigo_900">#1a237e</color>
+    <color name="grey_900">#263238</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="light_withe">#F1F5FA</color>
+    <color name="light_white">#F1F5FA</color>
+    <color name="yellow_award">#FFD05C</color>
+    <color name="red_500">#f44336</color>
 </resources>
