--- a/TapasTop/app/src/main/res/layout/fragment_main_menu.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_main_menu.xml
@@ -123,31 +123,26 @@
                     android:id="@+id/favorite_title_main_menu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_above="@id/favorite_ic_main_menu"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="10dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginLeft="10dp"
                     android:text="@string/favorites_title"
                     android:textColor="@color/grey_900"
                     android:textSize="30sp"
+                    android:drawablePadding="10dp"
+                    android:drawableRight="@drawable/ic_favorite"
                     android:fontFamily="@font/brandon_grotesque_bold_italic"
                     />
-                <ImageView
-                    android:id="@+id/favorite_ic_main_menu"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/ic_favorite"
-                    android:elevation="10dp"/>
                 <TextView
                     android:id="@+id/top_5_title_main_menu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
                     android:layout_toEndOf="@id/favorite_title_main_menu"
-                    android:layout_above="@id/favorite_ic_main_menu"
                     android:fontFamily="@font/brandon_grotesque_bold_italic"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="20dp"
                     android:textSize="30sp"
                     android:textColor="@color/grey_900"
                     android:text="@string/top_title"/>
@@ -182,37 +177,31 @@
                     android:id="@+id/awards_title_main_menu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_above="@id/award_ic_main_menu"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="10dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginLeft="20dp"
+                    android:drawableRight="@drawable/ic_award"
                     android:text="@string/awards_title"
                     android:textColor="@color/grey_900"
                     android:textSize="30sp"
                     android:fontFamily="@font/brandon_grotesque_bold_italic"/>
-                <ImageView
-                    android:id="@+id/award_ic_main_menu"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginLeft="10dp"
-                    android:paddingBottom="10dp"
-                    android:elevation="10dp"
-                    android:src="@drawable/ic_award"/>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toEndOf="@id/awards_title_main_menu"
-                    android:layout_above="@id/award_ic_main_menu"
-                    android:layout_marginLeft="10dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_toRightOf="@id/awards_title_main_menu"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="45dp"
                     android:fontFamily="@font/brandon_grotesque_bold_italic"
                     android:text="@string/last_5_title"
                     android:textSize="30sp"
                     android:textColor="@color/grey_900"
                     />
                 <Button
-                    android:id="@+id/awards_view_all_btn"
+                    android:id="@+id/awards_
+                    view_all_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/view_all_title"
