--- a/TapasTop/app/src/main/res/values/themes.xml
+++ b/TapasTop/app/src/main/res/values/themes.xml
@@ -7,7 +7,7 @@
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondaryVariant">@color/amber_900</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <!-- Status bar style -->
