--- a/TapasTop/app/src/main/res/layout/fragment_signup_tab.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_signup_tab.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <com.google.android.material.textfield.TextInputLayout
         style="@style/OutlinedRoundedBox"
         android:id="@+id/signup_username"
@@ -45,7 +44,8 @@
             android:id="@+id/signup_email_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/email_hint"/>
+            android:inputType="textEmailAddress"
+            android:hint="@string/email_hint" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
