--- a/TapasTop/app/src/main/res/layout/fragment_initial.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_initial.xml
@@ -5,6 +5,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <!-- Esto debería ser wrap content -->
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintVertical_bias="0"
+        app:layout_constraintHeight_percent=".27"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/amber_700">
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:cropToPadding="true"
+            app:lottie_rawRes="@raw/login_animation_lottie"
+            app:lottie_autoPlay="true"
+            />
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:lottie_rawRes="@raw/tapas_top_lottie"
+            app:lottie_autoPlay="true"/>
+    </LinearLayout>
+
+
+    
+    <!--
     <ImageView
         android:id="@+id/login_bg"
         android:layout_width="match_parent"
@@ -18,8 +47,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <TextView
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/app_title"
+        android:layout_width="match_parent"
+        android:layout_height="190dp"
+        app:lottie_rawRes="@raw/tapas_top_lottie"
+        app:lottie_autoPlay="true"
+        android:scaleType="centerInside"
+        app:layout_constraintVertical_bias=".2"
+        app:layout_constraintLeft_toLeftOf="@id/login_bg"
+        app:layout_constraintRight_toRightOf="@id/login_bg"
+        app:layout_constraintBottom_toTopOf="@id/constraintlayout"
+        app:layout_constraintTop_toTopOf="@id/login_bg"
+        />
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="79sp"
@@ -35,7 +77,7 @@
         app:layout_constraintLeft_toLeftOf="@id/login_bg"
         app:layout_constraintRight_toRightOf="@id/login_bg"
         app:layout_constraintBottom_toBottomOf="@id/login_bg"
-        app:layout_constraintTop_toTopOf="@id/login_bg" />
+        app:layout_constraintTop_toTopOf="@id/login_bg" />-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintlayout"
         android:layout_width="match_parent"
@@ -72,8 +114,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tab_layout"/>
-
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
