--- a/TapasTop/app/src/main/res/values/colors.xml
+++ b/TapasTop/app/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="red_500">#f44336</color>
     <color name="red_700">#d50000</color>
     <color name="amber_900">#ff6f00</color>
+    <color name="amber_700">#ffa000</color>
+    C5B6B6
 </resources>
