--- a/TapasTop/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_edit_profile.xml
@@ -12,16 +12,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_marginTop="20dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:src="@drawable/profile_pic_placeholder" />
+                android:src="@drawable/profile_pic_male" />
 
             <EditText
                 android:id="@+id/username_textview"
