--- a/TapasTop/app/src/main/res/layout/fragment_initial.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_initial.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <!-- Esto debería ser wrap content -->
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintVertical_bias="0"
@@ -16,20 +15,31 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@color/amber_700">
+
         <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/app_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:cropToPadding="true"
-            app:lottie_rawRes="@raw/login_animation_lottie"
-            app:lottie_autoPlay="true"
-            />
-        <com.airbnb.lottie.LottieAnimationView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="170dp"
             app:lottie_rawRes="@raw/tapas_top_lottie"
             app:lottie_autoPlay="true"/>
-    </LinearLayout>
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/login_animation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="180dp"
+            android:layout_marginBottom="20dp"
+            app:lottie_rawRes="@raw/login_animation_lottie"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"/>
+    </RelativeLayout>
 
 
     
@@ -102,7 +112,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:tabMode="fixed"
             app:tabSelectedTextColor="@color/black"
-            app:tabIndicatorColor="@color/blue_700"/>
+            app:tabIndicatorColor="@color/amber_900"/>
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/view_pager"
