--- a/TapasTop/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/TapasTop/app/src/main/res/layout/fragment_edit_profile.xml
@@ -25,7 +25,7 @@
                 android:src="@drawable/profile_pic_male" />
 
             <EditText
-                android:id="@+id/username_textview"
+                android:id="@+id/username_edit_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -36,69 +36,87 @@
                 app:layout_constraintTop_toBottomOf="@+id/profile_img" />
 
             <EditText
-                android:id="@+id/name_textview"
+                android:id="@+id/name_edit_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintHorizontal_bias="0.05"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/username_textview"
+                app:layout_constraintTop_toBottomOf="@id/username_edit_text"
                 android:hint="@string/fullname_hint"/>
 
             <EditText
-                android:id="@+id/email_textview"
+                android:id="@+id/email_edit_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintHorizontal_bias="0.05"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/name_textview"
+                app:layout_constraintTop_toBottomOf="@id/name_edit_text"
                 android:hint="@string/email_hint"/>
 
-            <EditText
-                android:id="@+id/gender_textview"
+            <RadioGroup
+                android:id="@+id/gender_radio_group"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintHorizontal_bias="0.05"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/email_textview"
-                android:hint="@string/gender_hint"/>
+                android:orientation="horizontal">
+                <RadioButton
+                    android:id="@+id/male_radio_button"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintHorizontal_bias="0.05"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/gender_radio_group"
+                    tools:text="@string/gender_male"/>
+
+                <RadioButton
+                    android:id="@+id/female_radio_button"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintHorizontal_bias="1.5"
+                    app:layout_constraintLeft_toLeftOf="@+id/male_radio_button"
+                    tools:text="@string/gender_female"/>
+            </RadioGroup>
 
             <EditText
-                android:id="@+id/country_textview"
+                android:id="@+id/country_edit_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintHorizontal_bias="0.05"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/gender_textview"
+                app:layout_constraintTop_toBottomOf="@+id/gender_radio_group"
                 android:hint="@string/country_hint"/>
 
             <EditText
-                android:id="@+id/location_textview"
+                android:id="@+id/location_edit_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintHorizontal_bias="0.05"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/country_textview"
+                app:layout_constraintTop_toBottomOf="@id/country_edit_text"
                 android:hint="@string/location_hint"/>
 
             <EditText
-                android:id="@+id/description_textview"
+                android:id="@+id/description_edit_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintHorizontal_bias="0.05"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/location_textview"
+                app:layout_constraintTop_toBottomOf="@id/location_edit_text"
                 android:hint="@string/description_hint"/>
 
 
